# parakeet-api-server

./: Dockerfile  README.md  conf.sh  ddistro_install.sh  docker-compose.yaml  install.sh  pyproject.toml  start-cpu.sh  start_native.sh
docs/: examples.md
src/parakeet_api_server/: backend.py  benchmark.py  benchmark.sh  conf.sh  config.py  inference_nemo.py  inference_onnx.py  model_downloader.py  server.py  test_client.py
